--- a/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
+++ b/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
@@ -37,6 +37,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="system.windows.controls.datavisualization.toolkit">
+      <HintPath>..\..\..\OneDrive\Education and Work\C#\_Libraries\Chart Control in WPF\system.windows.controls.datavisualization.toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -49,6 +52,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="wpftoolkit">
+      <HintPath>..\..\..\OneDrive\Education and Work\C#\_Libraries\Chart Control in WPF\wpftoolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="Views\App.xaml">
@@ -67,6 +73,7 @@
     </Page>
     <Compile Include="Statistics\IStatistics.cs" />
     <Compile Include="Statistics\SimResults.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
