--- a/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
+++ b/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
@@ -72,6 +72,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Statistics\IStatistics.cs" />
+    <Compile Include="Statistics\ResultTracker.cs" />
     <Compile Include="Statistics\SimResults.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
