--- a/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
+++ b/PlanerSimulation_ProcessInteraction/PlanerSimulation_ProcessInteraction.csproj
@@ -67,13 +67,29 @@
     <Compile Include="Models\ProcessEvent.cs" />
     <Compile Include="Models\Supervisor.cs" />
     <Compile Include="RelayCommand.cs" />
+    <Compile Include="ViewModels\LSearchViewModel.cs" />
+    <Compile Include="ViewModels\OutcomeSearchViewModel.cs" />
+    <Compile Include="ViewModels\SPSearchViewModel.cs" />
     <Compile Include="Views\DebugView.xaml.cs">
       <DependentUpon>DebugView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LSearchView.xaml.cs">
+      <DependentUpon>LSearchView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NormalView.xaml.cs">
       <DependentUpon>NormalView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\OutcomeSearchView.xaml.cs">
+      <DependentUpon>OutcomeSearchView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SPSearchView.xaml.cs">
+      <DependentUpon>SPSearchView.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\DebugView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\LSearchView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -97,6 +113,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\NormalView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\OutcomeSearchView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SPSearchView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
